feat: add DOM elements

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             Find Prime Numbers
           </button>
         </div>
+        <table>
+          <thead>
+              <tr>
+                  <th>Función</th>
+                  <th>Valor</th>
+                  <th>Tiempo promedio para 10000 operaciones</th>
+              </tr>
+          </thead>
+          <tbody id="results">
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
