--- a/index.html
+++ b/index.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/uc.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" src="/main.js"></script>
-    <script src="/module/find_prime_numbers.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <div>
-        <h1>Enter a number:</h1>
-        <div class="card">
-          <select id="method">
-            <option value="wasm">Use WASM</option>
-            <option value="js">Use JS</option>
-          </select>
-          <input id="number" type="number" />
-          <button id="trigger" type="button">
-            Find Prime Numbers
-          </button>
-        </div>
-        <table>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/uc.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <script type="module" src="/main.js"></script>
+  <script src="/module/find_prime_numbers.js"></script>
+</head>
+<body class="bg-zinc-900 min-h-screen flex flex-col justify-between">
+  <div id="app" class="flex justify-center mt-10">
+    <div class="p-8 md:w-4/5 lg:w-3/5 flex flex-col items-center space-y-6">
+      <h1 class="text-5xl text-center text-white font-bold mb-6 transition duration-500 ease-in-out transform hover:scale-105 hover:text-blue-400">Prime Number Finder</h1>
+      <p class="text-white mb-6 text-xl md:text-2xl lg:text-2xl transition duration-500 ease-in-out">
+        This is a simple web app that finds prime numbers using WebAssembly and JavaScript. Enter a number and click the button to find all prime factors of that number.
+      </p>
+      <div class="card p-4 border-gray-200 rounded-lg w-full sm:w-3/4 md:w-1/2 lg:w-1/3">
+        <select id="method" class="block w-full p-2 border border-gray-300 rounded-lg mb-4 focus:ring-2 focus:ring-blue-500">
+          <option value="wasm">Use WASM</option>
+          <option value="js">Use JS</option>
+        </select>
+        <input id="number" type="number" class="block w-full p-2 border border-gray-300 rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+        <button id="trigger" type="button" class="w-full bg-blue-500 font-bold py-2 hover:bg-blue-600 text-white shadow-lg transform hover:-translate-y-1 transition-all duration-300 px-2 rounded-lg">
+          Find Prime Numbers
+        </button>
+      </div>
+      <div id="spinner" class="hidden">
+        <div class="loader bg-blue-500"></div>
+      </div>
+      <div class="overflow-x-auto mt-6">
+        <table id="table" class="w-full text-left text-white">
           <thead>
-              <tr>
-                  <th>Función</th>
-                  <th>Valor</th>
-                  <th>Tiempo promedio para 10000 operaciones</th>
-              </tr>
+            <tr>
+              <th class="p-2 text-center">Function</th>
+              <th class="p-2 text-center">Value</th>
+              <th class="p-2 text-center">Average Time for 10,000 Operations</th>
+            </tr>
           </thead>
-          <tbody id="results">
+          <tbody id="results" class="items-center">
           </tbody>
         </table>
       </div>
     </div>
-  </body>
+  </div>
+  <footer class="text-center text-white p-4 bg-gray-800">
+    Made with <span class="text-red-500">❤</span> by
+    <a href="https://github.com/BMarink512" target="_blank" class="text-blue-400 hover:text-blue-600 transition duration-300 ease-in-out">BMarink512</a>,
+    <a href="https://github.com/Maxi1805" target="_blank" class="text-blue-400 hover:text-blue-600 transition duration-300 ease-in-out">Maxi1805</a> and
+    <a href="https://github.com/IgnacioPorte" target="_blank" class="text-blue-400 hover:text-blue-600 transition duration-300 ease-in-out">IgnacioPorte</a>
+  </footer>
+</body>
 </html>
